Fixed typo in P1.md (#52)

--- a/P1.md
+++ b/P1.md
@@ -139,7 +139,7 @@ We define one success test, one insuccess test, and tests for invalid input. The
 	+ [Cancel the tournament after it has started](https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/CancelTournamentTest.groovy#L147)
 	+ [Cancel a tournament with 1 student signed up](https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/CancelTournamentTest.groovy#L164)
 - [TournamentSignUpTest](https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentSignUpTest.groovy)
-	+ [Tournament has ended])(https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentSignUpTest.groovy#L134)
+	+ [Tournament has ended](https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentSignUpTest.groovy#L134)
 	+ [Tournament has already started](https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentSignUpTest.groovy#L151)
 	+ [Tournament is open and student hasn't signed up for it yet](https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentSignUpTest.groovy#L168)
 	+ [Tournament is open and student has already signed up for it](https://github.com/tecnico-softeng/es20al_07-project/blob/4edce370d336b1b3a944c5904832a712452fb69b/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentSignUpTest.groovy#L179)
