--- a/P3.md
+++ b/P3.md
@@ -42,8 +42,15 @@ The list of pull requests associated with this feature is:
 
 ### Additional services implemented
 
-None
+- [ApproveRejectQuestion](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/StudentQuestionService.java#L78)
+    + [Controller](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/api/StudentQuestionController.java#L49)
+    + [Spock tests](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/ApproveRejectQuestionTest.groovy)
+    + [Feature test (JMeter)](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/question/WSStudentQuestionApproveRejectTest.jmx)
 
+- [setStudentQuestionExplanation](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/StudentQuestionService.java#L96)
+    + [Controller](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/api/StudentQuestionController.java#L56)
+    + [Spock tests](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/AddExplanationTest.groovy)
+    + [Feature test (JMeter)](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/question/WSAddExplanationTest.jmx)
 
 ### End-to-end tests
 
