fixed typos and missing issues

--- a/P3.md
+++ b/P3.md
@@ -5,9 +5,9 @@
 ### Subgroup
 
  - Maria Beatriz Martins, 89498, apollee
-   + Issues assigned: [#129](https://github.com/tecnico-softeng/es20al_07-project/issues/129),  [#130](https://github.com/tecnico-softeng/es20al_07-project/issues/130), [#158](https://github.com/tecnico-softeng/es20al_07-project/issues/158), [#131](https://github.com/tecnico-softeng/es20al_07-project/issues/131), [#132](https://github.com/tecnico-softeng/es20al_07-project/issues/132), [#156](https://github.com/tecnico-softeng/es20al_07-project/issues/156)
+   + Issues assigned: [#120](https://github.com/tecnico-softeng/es20al_07-project/issues/120, [#121](https://github.com/tecnico-softeng/es20al_07-project/issues/121), [#129](https://github.com/tecnico-softeng/es20al_07-project/issues/129),  [#130](https://github.com/tecnico-softeng/es20al_07-project/issues/130), [#158](https://github.com/tecnico-softeng/es20al_07-project/issues/158), [#131](https://github.com/tecnico-softeng/es20al_07-project/issues/131), [#132](https://github.com/tecnico-softeng/es20al_07-project/issues/132), [#156](https://github.com/tecnico-softeng/es20al_07-project/issues/156)
  - Pedro Lamego, 89526, pedro-lamego
-   + Issues assigned: [#150](https://github.com/tecnico-softeng/es20al_07-project/issues/150), [#151](https://github.com/tecnico-softeng/es20al_07-project/issues/151), [#152](https://github.com/tecnico-softeng/es20al_07-project/issues/152)
+   + Issues assigned: [#119](https://github.com/tecnico-softeng/es20al_07-project/issues/119), [#150](https://github.com/tecnico-softeng/es20al_07-project/issues/150), [#151](https://github.com/tecnico-softeng/es20al_07-project/issues/151), [#152](https://github.com/tecnico-softeng/es20al_07-project/issues/152)
  
 ### Pull requests associated with this feature
 
@@ -42,7 +42,10 @@ The list of pull requests associated with this feature is:
 
 ### Additional services implemented
 
-None
+ - [setStudentQuestionExplanation](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/StudentQuestionService.java)
+    + [Controller](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/api/StudentQuestionController.java)
+    + [Spock tests](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/ApproveRejectQuestionTest.groovy)
+    + [Feature test (JMeter)](https://github.com)
 
 
 ### End-to-end tests
@@ -57,7 +60,7 @@ None
 - [Reject a student question and add an explanation](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/cypress/integration/studentQuestion/useStudentQuestion.js#L49)
 
 #### Rationale
-The end-to-end tests allow us to test and demonstrate all common use patterns for the frontend side of the application, as well as their integration with the backend portion. In this case, we simulate a correct usage of the create a student question functionality, as well as 3 examples of incorrct usage. All incorrect usages produce an error message and do not create faulty student questions. We also simulate the usage of the accept/reject a student question functionality, as well as the abiluty to add an explanation, both working as intended.
+The end-to-end tests allow us to test and demonstrate all common use cases for the frontend side of the application, as well as their integration with the backend portion. In this case, we simulate a correct usage of the create a student question functionality, as well as 3 examples of incorrect usage. All incorrect usages produce an error message and do not create faulty student questions. We also simulate the usage of the accept/reject a student question functionality, as well as the abiluty to add an explanation, both working as intended.
 
 #### Commands defined
 
@@ -86,11 +89,11 @@ Not implemented
 ### Subgroup
 
  - Afonso Ribeiro, 86752, AfonsoRibeiro
-   + Issues assigned: [#133](https://github.com/tecnico-softeng/es20al_07-project/issues/133), [#134](https://github.com/tecnico-softeng/es20al_07-project/issues/134), [#144](https://github.com/tecnico-softeng/es20al_07-project/issues/144)
+   + Issues assigned: [#125](https://github.com/tecnico-softeng/es20al_07-project/issues/125), [#133](https://github.com/tecnico-softeng/es20al_07-project/issues/133), [#134](https://github.com/tecnico-softeng/es20al_07-project/issues/134), [#144](https://github.com/tecnico-softeng/es20al_07-project/issues/144)
  - Joana Alvoeiro, 89469, joanaalvoeiro
-   + Issues assigned: [#138](https://github.com/tecnico-softeng/es20al_07-project/issues/138), [#135](https://github.com/tecnico-softeng/es20al_07-project/issues/135), [#161](https://github.com/tecnico-softeng/es20al_07-project/issues/161), [#137](https://github.com/tecnico-softeng/es20al_07-project/issues/137), [#136](https://github.com/tecnico-softeng/es20al_07-project/issues/136), [#160](https://github.com/tecnico-softeng/es20al_07-project/issues/160)
+   + Issues assigned: [#123](https://github.com/tecnico-softeng/es20al_07-project/issues/123), [#124](https://github.com/tecnico-softeng/es20al_07-project/issues/124), [#138](https://github.com/tecnico-softeng/es20al_07-project/issues/138), [#135](https://github.com/tecnico-softeng/es20al_07-project/issues/135), [#161](https://github.com/tecnico-softeng/es20al_07-project/issues/161), [#137](https://github.com/tecnico-softeng/es20al_07-project/issues/137), [#136](https://github.com/tecnico-softeng/es20al_07-project/issues/136), [#160](https://github.com/tecnico-softeng/es20al_07-project/issues/160)
  - Tiago Antunes, 89545, TiagoMAntunes
-   + Issues assigned: [#127](https://github.com/tecnico-softeng/es20al_07-project/issues/127), [#126](https://github.com/tecnico-softeng/es20al_07-project/issues/126), [#142](https://github.com/tecnico-softeng/es20al_07-project/issues/142)
+   + Issues assigned: [#122](https://github.com/tecnico-softeng/es20al_07-project/issues/122), [#127](https://github.com/tecnico-softeng/es20al_07-project/issues/127), [#126](https://github.com/tecnico-softeng/es20al_07-project/issues/126), [#142](https://github.com/tecnico-softeng/es20al_07-project/issues/142)
  
 ### Pull requests associated with this feature
 
@@ -141,7 +144,7 @@ None
  - [Login cancels a created tournament](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/cypress/integration/student/useTournaments.js#L39)
 
 #### Rationale
-The end-to-end tests allow us to test and demonstrate all common use patterns for the frontend side of the application, as well as their integration with the backend portion. In this case, we simulate a correct usage of the tournament creation functionality, as well as two examples of incorrect usage. Both of the incorrect usages produce an error message and do not create an inconsistent tournament. We also demonstrate the usage of the join tournament and cancel tournament functionalities, both working as intended.
+The end-to-end tests allow us to test and demonstrate all common use cases for the frontend side of the application, as well as their integration with the backend portion. In this case, we simulate a correct usage of the tournament creation functionality, as well as two examples of incorrect usage. Both of the incorrect usages produce an error message and do not create an inconsistent tournament. We also demonstrate the usage of the join tournament and cancel tournament functionalities, both working as intended.
 
 #### Commands defined
 
