Added last PR and fixed presentation error

--- a/P3.md
+++ b/P3.md
@@ -5,7 +5,7 @@
 ### Subgroup
 
  - Maria Beatriz Martins, 89498, apollee
-   + Issues assigned: [#120](https://github.com/tecnico-softeng/es20al_07-project/issues/120, [#121](https://github.com/tecnico-softeng/es20al_07-project/issues/121), [#129](https://github.com/tecnico-softeng/es20al_07-project/issues/129),  [#130](https://github.com/tecnico-softeng/es20al_07-project/issues/130), [#158](https://github.com/tecnico-softeng/es20al_07-project/issues/158), [#131](https://github.com/tecnico-softeng/es20al_07-project/issues/131), [#132](https://github.com/tecnico-softeng/es20al_07-project/issues/132), [#156](https://github.com/tecnico-softeng/es20al_07-project/issues/156)
+   + Issues assigned: [#120](https://github.com/tecnico-softeng/es20al_07-project/issues/120), [#121](https://github.com/tecnico-softeng/es20al_07-project/issues/121), [#129](https://github.com/tecnico-softeng/es20al_07-project/issues/129),  [#130](https://github.com/tecnico-softeng/es20al_07-project/issues/130), [#158](https://github.com/tecnico-softeng/es20al_07-project/issues/158), [#131](https://github.com/tecnico-softeng/es20al_07-project/issues/131), [#132](https://github.com/tecnico-softeng/es20al_07-project/issues/132), [#156](https://github.com/tecnico-softeng/es20al_07-project/issues/156)
  - Pedro Lamego, 89526, pedro-lamego
    + Issues assigned: [#119](https://github.com/tecnico-softeng/es20al_07-project/issues/119), [#150](https://github.com/tecnico-softeng/es20al_07-project/issues/150), [#151](https://github.com/tecnico-softeng/es20al_07-project/issues/151), [#152](https://github.com/tecnico-softeng/es20al_07-project/issues/152)
  
@@ -22,6 +22,7 @@ The list of pull requests associated with this feature is:
  - [PR #162](https://github.com/tecnico-softeng/es20al_07-project/pull/162)
  - [PR #164](https://github.com/tecnico-softeng/es20al_07-project/pull/164)
  - [PR #165](https://github.com/tecnico-softeng/es20al_07-project/pull/165)
+ - [PR #170](https://github.com/tecnico-softeng/es20al_07-project/pull/170)
 
 
 ### Frontend
