--- a/P4.md
+++ b/P4.md
@@ -26,9 +26,11 @@ The list of pull requests associated with this feature is:
  - [PR #270](https://github.com/tecnico-softeng/es20al_07-project/pull/270)
  - [PR #271](https://github.com/tecnico-softeng/es20al_07-project/pull/271)
  - [PR #282](https://github.com/tecnico-softeng/es20al_07-project/pull/282)
+ - [PR #287](https://github.com/tecnico-softeng/es20al_07-project/pull/287)
  - [PR #291](https://github.com/tecnico-softeng/es20al_07-project/pull/291)
  - [PR #294](https://github.com/tecnico-softeng/es20al_07-project/pull/294)
  - [PR #295](https://github.com/tecnico-softeng/es20al_07-project/pull/295)
+ - [PR #299](https://github.com/tecnico-softeng/es20al_07-project/pull/299)
   
 
 ### Listed features
@@ -43,7 +45,8 @@ The list of pull requests associated with this feature is:
      
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/studentQuestion/useStudentQuestion.js#L63)
    + Screenshot: 
-   
+    
+        ![cypress_questions.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_questions.png)
 
 #### Feature number 5: Teacher changes an approved question before it is made available
 
@@ -56,7 +59,8 @@ The list of pull requests associated with this feature is:
  
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/studentQuestion/useStudentQuestion.js#L53)
     + Screenshot:
-    
+        
+        ![cypress_questions.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_questions.png)
     
 #### Feature number 6: Student changes and resubmit a rejected question
 
@@ -70,21 +74,21 @@ The list of pull requests associated with this feature is:
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/studentQuestion/useStudentQuestion.js#L69)
     + Screenshot:
     
-    
+        ![cypress_questions.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_questions.png)
     
 #### Feature number 7: Student's dashboard
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/dashboard/DashboardService.java#L47)
  - [x] Spock tests [1](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/StudentDashboardQuestionSubmittedTest.groovy) [2](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/StudentDashboardQuestionApprovedTest.groovy)
- - [ ] [JMeter feature test](https://github.com)
+ - [ ] [JMeter feature test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/question/WSFindStudentQuestionSubmittedTest.jmx)
     + Screenshot:
         
         ![findStudentQuestionSubmittedTest.png](http://web.ist.utl.pt/~ist189545/es_p4/findStudentQuestionSubmittedTest.png)
         
- - [ ] [Cypress use case test](https://github.com)
+ - [ ] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/dashboard/useDashboard.js)
     + Screenshot:
     
-    
+        ![cypress_dashboard.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_dashboard.png)
     
 #### Feature number 8: Public/Private selection
 
@@ -98,8 +102,9 @@ The list of pull requests associated with this feature is:
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/privacy.js#L22)
     + Screenshot:
 
-
-
+        ![cypress_privacy.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_privacy.png)
+        
+        
 ---
 
 
@@ -108,13 +113,13 @@ The list of pull requests associated with this feature is:
 ### Subgroup
 
  - Afonso Ribeiro, 86752, [AfonsoRibeiro](https://github.com/AfonsoRibeiro)
-   + Issues assigned: [#208](https://github.com/tecnico-softeng/es20al_07-project/issues/208), [#209](https://github.com/tecnico-softeng/es20al_07-project/issues/209), [#210](https://github.com/tecnico-softeng/es20al_07-project/issues/210), [#211](https://github.com/tecnico-softeng/es20al_07-project/issues/211), [#212](https://github.com/tecnico-softeng/es20al_07-project/issues/212), [#213](https://github.com/tecnico-softeng/es20al_07-project/issues/213)
+   + Issues assigned: [#269](https://github.com/tecnico-softeng/es20al_07-project/issues/269), [#208](https://github.com/tecnico-softeng/es20al_07-project/issues/208), [#209](https://github.com/tecnico-softeng/es20al_07-project/issues/209), [#210](https://github.com/tecnico-softeng/es20al_07-project/issues/210), [#211](https://github.com/tecnico-softeng/es20al_07-project/issues/211), [#212](https://github.com/tecnico-softeng/es20al_07-project/issues/212), [#213](https://github.com/tecnico-softeng/es20al_07-project/issues/213)
    + Tasks: F6.1:Service, F6.1:Spock Tests, F6.1:Routing and Page Implementation and F6.1 E2E Tests
- - Joana Alvoeiro, istID, [joanaalvoeiro](https://github.com/joanaalvoeiro)
-   + Issues assigned: [#207](https://github.com/tecnico-softeng/es20al_07-project/issues/207), [#185](https://github.com/tecnico-softeng/es20al_07-project/issues/185), [#187](https://github.com/tecnico-softeng/es20al_07-project/issues/187), [#189](https://github.com/tecnico-softeng/es20al_07-project/issues/189), [#191](https://github.com/tecnico-softeng/es20al_07-project/issues/191), [#192](https://github.com/tecnico-softeng/es20al_07-project/issues/192), [#194](https://github.com/tecnico-softeng/es20al_07-project/issues/194), [#195](https://github.com/tecnico-softeng/es20al_07-project/issues/195), [#196](https://github.com/tecnico-softeng/es20al_07-project/issues/196), [#253](https://github.com/tecnico-softeng/es20al_07-project/issues/253), [#252](https://github.com/tecnico-softeng/es20al_07-project/issues/252), [#251](https://github.com/tecnico-softeng/es20al_07-project/issues/251), [#250](https://github.com/tecnico-softeng/es20al_07-project/issues/250)
+ - Joana Alvoeiro, 89469, [joanaalvoeiro](https://github.com/joanaalvoeiro)
+   + Issues assigned: [#297](https://github.com/tecnico-softeng/es20al_07-project/issues/297), [#285](https://github.com/tecnico-softeng/es20al_07-project/issues/285), [#207](https://github.com/tecnico-softeng/es20al_07-project/issues/207), [#185](https://github.com/tecnico-softeng/es20al_07-project/issues/185), [#187](https://github.com/tecnico-softeng/es20al_07-project/issues/187), [#189](https://github.com/tecnico-softeng/es20al_07-project/issues/189), [#191](https://github.com/tecnico-softeng/es20al_07-project/issues/191), [#192](https://github.com/tecnico-softeng/es20al_07-project/issues/192), [#194](https://github.com/tecnico-softeng/es20al_07-project/issues/194), [#195](https://github.com/tecnico-softeng/es20al_07-project/issues/195), [#196](https://github.com/tecnico-softeng/es20al_07-project/issues/196), [#253](https://github.com/tecnico-softeng/es20al_07-project/issues/253), [#252](https://github.com/tecnico-softeng/es20al_07-project/issues/252), [#251](https://github.com/tecnico-softeng/es20al_07-project/issues/251), [#250](https://github.com/tecnico-softeng/es20al_07-project/issues/250)
    + Tasks: F7.1:Service, F7.1:Spock Tests, F7.1:Web Service, F7.1:Web Service Tests, F7.1:Routing and Page Implementation, F7.1 E2E Tests, F9.1:Service, F9.1:Spock Tests, F9.1:Web Service, F9.1:Web Service Tests, F9.1:Routing and Page Implementation and F9.1 E2E Tests
  - Tiago Antunes, 89545, [TiagoMAntunes](https://github.com/TiagoMAntunes)
-   + Issues assigned: [#180](https://github.com/tecnico-softeng/es20al_07-project/issues/180), [#179](https://github.com/tecnico-softeng/es20al_07-project/issues/179), [#178](https://github.com/tecnico-softeng/es20al_07-project/issues/178), [#177](https://github.com/tecnico-softeng/es20al_07-project/issues/177), [#172](https://github.com/tecnico-softeng/es20al_07-project/issues/172), [#175](https://github.com/tecnico-softeng/es20al_07-project/issues/175), [#254](https://github.com/tecnico-softeng/es20al_07-project/issues/254), [#255](https://github.com/tecnico-softeng/es20al_07-project/issues/255), [#256](https://github.com/tecnico-softeng/es20al_07-project/issues/256), [#257](https://github.com/tecnico-softeng/es20al_07-project/issues/257), [#258](https://github.com/tecnico-softeng/es20al_07-project/issues/258), [#259](https://github.com/tecnico-softeng/es20al_07-project/issues/259), [#262](https://github.com/tecnico-softeng/es20al_07-project/issues/262), [#260](https://github.com/tecnico-softeng/es20al_07-project/issues/260), [#261](https://github.com/tecnico-softeng/es20al_07-project/issues/261)
+   + Issues assigned: [#284](https://github.com/tecnico-softeng/es20al_07-project/issues/284), [#293](https://github.com/tecnico-softeng/es20al_07-project/issues/293), [#180](https://github.com/tecnico-softeng/es20al_07-project/issues/180), [#179](https://github.com/tecnico-softeng/es20al_07-project/issues/179), [#178](https://github.com/tecnico-softeng/es20al_07-project/issues/178), [#177](https://github.com/tecnico-softeng/es20al_07-project/issues/177), [#172](https://github.com/tecnico-softeng/es20al_07-project/issues/172), [#175](https://github.com/tecnico-softeng/es20al_07-project/issues/175), [#254](https://github.com/tecnico-softeng/es20al_07-project/issues/254), [#255](https://github.com/tecnico-softeng/es20al_07-project/issues/255), [#256](https://github.com/tecnico-softeng/es20al_07-project/issues/256), [#257](https://github.com/tecnico-softeng/es20al_07-project/issues/257), [#258](https://github.com/tecnico-softeng/es20al_07-project/issues/258), [#259](https://github.com/tecnico-softeng/es20al_07-project/issues/259), [#262](https://github.com/tecnico-softeng/es20al_07-project/issues/262), [#260](https://github.com/tecnico-softeng/es20al_07-project/issues/260), [#261](https://github.com/tecnico-softeng/es20al_07-project/issues/261)
    + Tasks: F5.1:Service, F5.1:Spock Tests, F5.1:Web Service, F5.1:Web Service Tests, F5.1:Routing and Page Implementation, F5.1 E2E Tests, F8.1:Service, F8.1:Spock Tests, F8.1:Web Service, F8.1:Web Service Tests, F8.1:Routing and Page Implementation and F8.1 E2E Tests
  
 ### Pull requests associated with this feature
@@ -140,7 +145,10 @@ The list of pull requests associated with this feature is:
  - [PR #286](https://github.com/tecnico-softeng/es20al_07-project/pull/286)
  - [PR #289](https://github.com/tecnico-softeng/es20al_07-project/pull/289)
  - [PR #298](https://github.com/tecnico-softeng/es20al_07-project/pull/298)
-
+ - [PR #299](https://github.com/tecnico-softeng/es20al_07-project/pull/299)
+ - [PR #300](https://github.com/tecnico-softeng/es20al_07-project/pull/300)
+ - [PR #301](https://github.com/tecnico-softeng/es20al_07-project/pull/301)
+  
 ### Listed features
 
 #### Feature number 5: Generate Tournament Quiz 
@@ -150,11 +158,12 @@ The list of pull requests associated with this feature is:
  - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/tournament/WSGenerateQuizTest.jmx)
    + Screenshots:
       
-    ![generateQuizTest.png](http://web.ist.utl.pt/~ist189545/es_p4/generateQuizTest.png)
+        ![generateQuizTest.png](http://web.ist.utl.pt/~ist189545/es_p4/generateQuizTest.png)
          
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/useTournaments.js#L45)
    + Screenshot: 
-   
+        
+        ![cypress_tournaments.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_tournaments.png)
 
 
 #### Feature number 6: Answering Tournament questions
@@ -164,21 +173,21 @@ The list of pull requests associated with this feature is:
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/useTournaments.js#L45)
     + Screenshot:
     
-    
+        ![cypress_tournaments.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_tournaments.png)
     
 #### Feature number 7: Student's dashboard
 
- - [x] [Service](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/dashboard/DashboardService.java#L70)
- - [] [Spock tests](https://github.com)
- - [] [JMeter feature test](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/dashboard/DashboardService.java#L53)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentStatsTest.groovy)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/tournament/WSTournamentDashboardTest.jmx)
     + Screenshot:
     
+        ![dashboardResults.png](http://web.ist.utl.pt/~ist189545/es_p4/dashboardResults.png)
     
-    
- - [] [Cypress use case test](https://github.com)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/useTournaments.js#L81)
     + Screenshot:
-    
-    
+        
+        ![cypress_tournaments.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_tournaments.png)
     
 #### Feature number 8: Public/Private selection
 
@@ -191,24 +200,23 @@ The list of pull requests associated with this feature is:
         
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/privacy.js#L12)
     + Screenshot:
-
-
+    
+        ![cypress_privacy.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_privacy.png)
 
 ### Additional features
 
 #### Feature number 9: Tournament scoreboard
 
- - [] [Service](https://github.com)
- - [] [Spock tests](https://github.com)
- - [ ] [JMeter feature test](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L240)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentScoreboardTest.groovy)
+ - [ ] [JMeter feature test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/tournament/WSGetTournamentScoreboardTest.jmx)
     + Screenshot:
     
+        ![tournamentScoreboardResults.png](http://web.ist.utl.pt/~ist189545/es_p4/tournamentScoreboardResults.png)
     
-    
- - [ ] [Cypress use case test](https://github.com)
+ - [ ] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/useTournaments.js#L81)
     + Screenshot:
     
-    
-    
+        ![cypress_tournaments.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_tournaments.png)
   
 ---
