--- a/P4.md
+++ b/P4.md
@@ -80,12 +80,12 @@ The list of pull requests associated with this feature is:
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/dashboard/DashboardService.java#L47)
  - [x] Spock tests [1](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/StudentDashboardQuestionSubmittedTest.groovy) [2](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/StudentDashboardQuestionApprovedTest.groovy)
- - [ ] [JMeter feature test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/question/WSFindStudentQuestionSubmittedTest.jmx)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/question/WSFindStudentQuestionSubmittedTest.jmx)
     + Screenshot:
         
         ![findStudentQuestionSubmittedTest.png](http://web.ist.utl.pt/~ist189545/es_p4/findStudentQuestionSubmittedTest.png)
         
- - [ ] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/dashboard/useDashboard.js)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/dashboard/useDashboard.js)
     + Screenshot:
     
         ![cypress_dashboard.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_dashboard.png)
@@ -209,12 +209,12 @@ The list of pull requests associated with this feature is:
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L240)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/TournamentScoreboardTest.groovy)
- - [ ] [JMeter feature test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/tournament/WSGetTournamentScoreboardTest.jmx)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/backend/jmeter/tournament/WSGetTournamentScoreboardTest.jmx)
     + Screenshot:
     
         ![tournamentScoreboardResults.png](http://web.ist.utl.pt/~ist189545/es_p4/tournamentScoreboardResults.png)
     
- - [ ] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/useTournaments.js#L81)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_07-project/blob/develop/frontend/tests/e2e/specs/student/useTournaments.js#L81)
     + Screenshot:
     
         ![cypress_tournaments.png](http://web.ist.utl.pt/~ist189545/es_p4/cypress_tournaments.png)
